@@ -1,11 +1,13 @@
 HYDRA-JETTY
 --------------------------
-This is a copy of jetty pre-installed with various applications needed by hydra applications.
-Most notably, these include fedora (http://fedora-commons.org/) and solr (http://lucene.apache.org/solr/).  
+This is a copy of jetty pre-installed with various applications needed by Hydra 
+applications.
+Most notably, these include fedora (http://fedora-commons.org/) and 
+solr (http://lucene.apache.org/solr/).  
 
 To run, use 
 
-  java -XX:+CMSClassUnloadingEnabled -XX:PermSize=64M -XX:MaxPermSize=128M -jar start.jar
+  java -jar start.jar
 
 When jetty is finished initializing itself, Solr is available at 
 
@@ -15,11 +17,12 @@ When jetty is finished initializing itself, Solr is available at
 and fedora is available at 
 
 	http://localhost:8983/fedora/
-        http://localhost:8983/fedora-test/
+  http://localhost:8983/fedora-test/
 
 You can see a list of all installed applications at http://localhost:8983
 
-You can also change the port jetty starts on by editing the file etc/jetty.xml and changing this line to indicate a different port number:
+You can also change the port jetty starts on by editing the file etc/jetty.xml 
+and changing this line to indicate a different port number:
 
 <Set name="port"><SystemProperty name="jetty.port" default="8983"/></Set>
 
